Style.toMap() preserves declaration order
Style.toMap() returned Map.copyOf(...), whose iteration order is unspecified.
MediaQuery, ContainerQuery and Keyframes all iterate it to emit their
declarations, so the order of properties inside @media/@container/@keyframes
blocks was non-deterministic — and in CSS declaration order decides which rule
wins, so `marginTop(...).margin(...)` could emit either meaning.

Returns an insertion-ordered unmodifiable copy instead, matching what build()
already does. Three of the four new tests fail without this change.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01UoekwMwWrPGWcdShbCDCdy